--- a/spring_cloud/client-config/src/main/resources/application.properties
+++ b/spring_cloud/client-config/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=spring-cloud-config-client
 server.port=8002
-management.security.enabled=false
+management.endpoints.web.exposure.include=refresh
