--- a/spring_cloud/client-config/src/main/resources/application.properties
+++ b/spring_cloud/client-config/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=spring-cloud-config-client
 server.port=8002
 management.endpoints.web.exposure.include=refresh
+spring.cloud.bus.trace.enable=true
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
