--- a/spring_cloud/client-config/src/main/resources/application.properties
+++ b/spring_cloud/client-config/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=spring-cloud-config-client
 server.port=8002
-management.endpoints.web.exposure.include=refresh
+#curl -v -X POST http://localhost:8002/actuator/refresh
+#management.endpoints.web.exposure.include=refresh
+#curl -X POST http://localhost:8002/actuator/bus-refresh
+management.endpoints.web.exposure.include=bus-refresh
 spring.cloud.bus.trace.enable=true
 
 spring.rabbitmq.host=localhost
