--- a/spring_cloud/client-config/src/main/resources/application.properties
+++ b/spring_cloud/client-config/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8002
 #curl -v -X POST http://localhost:8002/actuator/refresh
 #management.endpoints.web.exposure.include=refresh
 #curl -X POST http://localhost:8002/actuator/bus-refresh
-management.endpoints.web.exposure.include=bus-refresh
+#management.endpoints.web.exposure.include=bus-refresh
 spring.cloud.bus.trace.enable=true
 
 spring.rabbitmq.host=localhost
