--- a/spring_cloud/config/src/main/resources/application.yml
+++ b/spring_cloud/config/src/main/resources/application.yml
@@ -11,8 +11,19 @@ spring:
           search-paths: config-repo                             # git仓库地址下的相对地址，可以配置多个，用,分割。
           username:       # git仓库的账号
           password:    # git仓库的密码
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
