add this beautiful world

--- a/spring_cloud/client-config/src/main/resources/application.properties
+++ b/spring_cloud/client-config/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.application.name=spring-cloud-config-client
-server.port=8002
+#spring.application.name=spring-cloud-config-client
+#server.port=8002
 #curl -v -X POST http://localhost:8002/actuator/refresh
 #management.endpoints.web.exposure.include=refresh
 #curl -X POST http://localhost:8002/actuator/bus-refresh
 #management.endpoints.web.exposure.include=bus-refresh
-spring.cloud.bus.trace.enable=true
+#spring.cloud.bus.trace.enable=true
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
