--- a/spring_cloud/client-config/src/main/resources/bootstrap.properties
+++ b/spring_cloud/client-config/src/main/resources/bootstrap.properties
@@ -1,7 +1,11 @@
-spring.cloud.config.name=neo-config
-spring.cloud.config.profile=dev
+spring.application.name=spring-cloud-config-client
+#spring.profiles.active=test
+#spring.cloud.config.name=neo-config
+#spring.cloud.config.profile=dev
 #spring.cloud.config.uri=http://localhost:8001/
-spring.cloud.config.label=master
+#spring.cloud.config.label=master
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=spring-cloud-config-server
+spring.cloud.config.profile=test
+spring.cloud.config.label=master
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
