--- a/spring_cloud/web/pom.xml
+++ b/spring_cloud/web/pom.xml
@@ -8,26 +8,22 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.lzq.spring.cloud</groupId>
-	<artifactId>zuul</artifactId>
+	<artifactId>web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>zuul</name>
-	<description>Demo project for Spring Boot</description>
+	<name>web</name>
+	<description>Web Demo project for Spring Boot</description>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.retry</groupId>
-			<artifactId>spring-retry</artifactId>
-		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
