--- a/spring_cloud/pom.xml
+++ b/spring_cloud/pom.xml
@@ -34,6 +34,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -53,6 +59,7 @@
         <module>zuul</module>
         <module>config</module>
         <module>client-config</module>
+        <module>web</module>
     </modules>
 
     <repositories>
