--- a/spring_cloud/web/src/main/resources/bootstrap.properties
+++ b/spring_cloud/web/src/main/resources/bootstrap.properties
@@ -1,3 +1,9 @@
 spring.application.name=spring-cloud-web
 server.port=9000
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka client刷新本地缓存时间
+#默认30s
+eureka.client.registryFetchIntervalSeconds=5
+#eureka客户端ribbon刷新时间
+#默认30s
+ribbon.ServerListRefreshInterval=5000
