--- a/spring_cloud/web/src/main/resources/bootstrap.properties
+++ b/spring_cloud/web/src/main/resources/bootstrap.properties
@@ -7,3 +7,13 @@ eureka.client.registryFetchIntervalSeconds=5
 #eureka客户端ribbon刷新时间
 #默认30s
 ribbon.ServerListRefreshInterval=5000
+
+spring.activiti.database-schema-update=true
+spring.activiti.process-definition-location-prefix=classpath:/process/
+# 这里还是记得注意最后面添加url时添加的语句
+
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mytest?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=Qiu19871127@&
