--- a/spring_cloud/web/src/main/resources/bootstrap.properties
+++ b/spring_cloud/web/src/main/resources/bootstrap.properties
@@ -9,7 +9,7 @@ eureka.client.registryFetchIntervalSeconds=5
 ribbon.ServerListRefreshInterval=5000
 
 spring.activiti.database-schema-update=true
-spring.activiti.process-definition-location-prefix=classpath:/process/
+spring.activiti.process-definition-location-prefix=classpath:/processes/
 # 这里还是记得注意最后面添加url时添加的语句
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
