--- a/spring_cloud/comm-app/user-center/pom.xml
+++ b/spring_cloud/comm-app/user-center/pom.xml
@@ -21,6 +21,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>2.1.3.RELEASE</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
 		<dependency>
